--- a/corpdata-biz/src/main/resources/templates/system/org/role/role_edit.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/role/role_edit.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>编辑角色</title>
-		<div th:replace="biz/common/common_form_header"></div>
+		<div th:replace="common/common_form_header"></div>
 	</head>
 <body>
 	<div class="building-details" id="building-details">
 	    <div class="layui-tab-content">
-			<form id="defaultForm" action="#" th:action="@{/orgrole/edit}" th:method="post" >
+			<form id="defaultForm" action="#" th:action="@{/orgrole/update}" th:method="post" >
 				<input type="hidden" id="id" name="id" th:value="${orgrole.id}" >
 				<div class="form-modal">
 					<div class="form-wrap clearfix">
