--- a/corpdata-biz/src/main/resources/templates/system/org/dept/dept_add.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/dept/dept_add.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>组织表单</title>
-		<div th:replace="biz/common/common_form_header"></div>
+		<div th:replace="common/common_form_header"></div>
 		<script type="text/javascript">
 			$(document).ready(function() {
 				initSelect("parentfolderid","/orgdept/selectjson/1","");
@@ -47,7 +47,7 @@
 	<body>
 		<div class="building-details" id="building-details">
     		<div class="layui-tab-content">
-    			<form id="defaultForm" th:method="post" th:action="@{/orgdept/add}">
+    			<form id="defaultForm" th:method="post" th:action="@{/orgdept/save}">
 	    			<div class="form-modal">
 						<div class="form-wrap clearfix">
 							<div class="col-md-12 col-sm-12 col-xs-12">
