--- a/corpdata-biz/src/main/resources/templates/system/org/role/role_add.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/role/role_add.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="building-details" id="building-details">
 	    <div class="layui-tab-content">
-			<form id="defaultForm" action="#" th:action="@{/orgrole/save}" th:method="post" >
+			<form id="defaultForm" action="#" th:action="@{/system/org/role/save}" th:method="post" >
 				<div class="form-modal">
 					<div class="form-wrap clearfix">
 						<div class="col-md-6 col-sm-6 col-xs-6">
