--- a/corpdata-biz/src/main/resources/templates/system/org/role/role_edit.html
+++ b/corpdata-biz/src/main/resources/templates/system/org/role/role_edit.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="building-details" id="building-details">
 	    <div class="layui-tab-content">
-			<form id="defaultForm" action="#" th:action="@{/orgrole/update}" th:method="post" >
+			<form id="defaultForm" action="#" th:action="@{/system/org/role/update}" th:method="post" >
 				<input type="hidden" id="id" name="id" th:value="${orgrole.id}" >
 				<div class="form-modal">
 					<div class="form-wrap clearfix">
