--- a/corpdata-biz/src/main/resources/templates/system/sys_index.html
+++ b/corpdata-biz/src/main/resources/templates/system/sys_index.html
@@ -58,12 +58,41 @@
 		          <a href="javascript:;"><i class="layui-icon" style="font-size: 20px" data-icon=""></i><cite>系统管理</cite><span class="layui-nav-more"></span></a>
 		          <dl class="layui-nav-child">
 		            <dd>
-		            	<a href="javascript:;" style="font-size: 20px" data-url="/system/role/list"><i class="layui-icon" style="font-size: 20px" data-icon=""></i>
-		            <cite>角色管理</cite></a>
+		            	<a href="/system/org/dept/list" target="centerFrame">
+		            		<i class="layui-icon">&#xe613;</i>
+		            		<cite>组织管理</cite>
+		            	</a>
 		            </dd>
-		            <dd><a href="/system/role/list" target="centerFrame">列表二</a></dd>
-		            <dd><a href="javascript:;">列表三</a></dd>
-		            <dd><a href="">超链接</a></dd>
+		            <dd>
+		            	<a href="/system/org/user/list" target="centerFrame" data-url="/system/org/role/list">
+		            		<i class="layui-icon">&#xe770;</i>
+		            		<cite>用户管理</cite>
+		            	</a>
+		            </dd>
+		            <dd>
+		            	<a href="/system/org/role/list" target="centerFrame" data-url="/system/org/role/list">
+		            		<i class="layui-icon">&#xe63c;</i>
+		            		<cite>角色管理</cite>
+		            	</a>
+		            </dd>
+		            <dd>
+		            	<a href="/system/org/role/list" target="centerFrame" data-url="/system/org/role/list">
+		            		<i class="layui-icon">&#xe60f;</i>
+		            		<cite>菜单管理</cite>
+		            	</a>
+		            </dd>
+		            <dd>
+		            	<a href="/system/org/role/list" target="centerFrame" data-url="/system/org/role/list">
+		            		<i class="layui-icon">&#xe665;</i>
+		            		<cite>系统监控</cite>
+		            	</a>
+		            </dd>
+		            <dd>
+		            	<a href="/system/org/role/list" target="centerFrame" data-url="/system/org/role/list">
+		            		<i class="layui-icon">&#xe705;</i>
+		            		<cite>系统日志</cite>
+		            	</a>
+		            </dd>
 		          </dl>
 		        </li>
 		        <li class="layui-nav-item">
