--- a/corpdata-biz/src/main/resources/templates/common/generator/entity.java.vm
+++ b/corpdata-biz/src/main/resources/templates/common/generator/entity.java.vm
@@ -4,6 +4,9 @@ import com.corpdata.core.base.BaseEntity;
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
 #end
+#if(${hasDatetime})
+import java.util.Date;
+#end
 
 /**
  * ${comments}
@@ -13,22 +16,22 @@ import java.math.BigDecimal;
  * 
  */
 public class ${className} extends BaseEntity {
-
 	private static final long serialVersionUID = 1L;
-	
 #foreach ($column in $columns)
-	//$column.comments
+#if($column.attrname!='id' && $column.attrname!='created' && $column.attrname!='creater' && $column.attrname!='modified' && $column.attrname!='modifier')
 	private $column.attrType $column.attrname;
+#end
 #end
 
 #foreach ($column in $columns)
-
+#if($column.attrname!='id' && $column.attrname!='created' && $column.attrname!='creater' && $column.attrname!='modified' && $column.attrname!='modifier')
 	public void set${column.attrName}($column.attrType $column.attrname) {
 		this.$column.attrname = $column.attrname;
 	}
 
-public $column.attrType get${column.attrName}() {
+	public $column.attrType get${column.attrName}() {
 		return $column.attrname;
 	}
+#end
 #end
 }
